Sample_Apps/sample_froentnend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecsdemo-frontend
  labels:
    app: ecsdemo-frontend
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ecsdemo-frontend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: ecsdemo-frontend
    spec:
      containers:
      - image: brentley/ecsdemo-frontend:latest
        imagePullPolicy: Always
        name: ecsdemo-frontend
        ports:
        - containerPort: 3000
          protocol: TCP
---


apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ecsdemo-frontend
  annotations:
    kubernetes.io/ingress.class: "nginx"
    #nginx.ingress.kubernetes.io/ssl-redirect: "false"
    #nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    #nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: a05eaa3bd483611eab26a026aee15004-fdd3afb16e8804f5.elb.us-west-2.amazonaws.com
    http:
      paths:
        - path: /front
          backend:
            serviceName: ecsdemo-frontend
            servicePort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: ecsdemo-frontend
spec:
  selector:
    app: ecsdemo-frontend
  #type: LoadBalancer
  ports:
   -  protocol: TCP
      port: 80
      targetPort: 3000
